--- a/app/views/kp/about.html.erb
+++ b/app/views/kp/about.html.erb
@@ -23,76 +23,87 @@
 </head>
 <body>
 <div class="container">
-<h2 class="text-xl">
-  Céginformációk:
-</h2>
+  <h2 class="text-xl">
+    Céginformációk:
+  </h2>
 </div>
-  <div class="about-container">
+<div class="about-container">
 
-    <div class="about-left text-md text-justify">
-      <p>
-        Cégünk 2011-ben kezdte tevékenységét. A társaság ügyvezetője Lengyel Árpád, aki a Kft. megalakulását megelőzően több kiemelkedő projektet vezetett, melynek során több mint 20 éves szakmai tapasztalatra tett szert a közmű- és útépítés terén. Fő profilunk a víz- és csatornahálózatok, továbbá a vízépítéshez kapcsolódó olajfogó-, tüzivíztározó műtárgyak építése, utak és parkolók kivitelezése. Rendelkezünk száloptikás csatorna kamerával, így speciális helyeken is vizsgálatokat tudunk végezni. A kivitelezéssel összefüggő tervezési-, engedélyezési feladatok, valamint az üzemeltető cégek felé történő átadások teljeskörű ügyintézését vállaljuk.
-      </p>
-      <p>
-        A társaság vezetője és állandó partnerei nagy szakmai rutinra tettek szert, és ismerve a közművek követelményrendszerét, korrekt módon tudják azt a megrendelők igényeivel összehangolni. Vállalkozásunk alapvetően a minőségi munkára, a korrekt üzleti kapcsolatokra és a megbízhatóságra, valamint a piacon való hosszú idejű megmaradásra fekteti a hangsúlyt.
-      </p>
-      <p>
-        Szakmai elismertségünket jelzi, hogy a HUMAN BioPlazma Kft. Gyógyszergyár területén lévő teljes víz- csatorna közmű hálózat karbantartását mi végezzük. Kiemelt fontosságú a gyár folyamatos termelése, így szakmailag igazi kihívást és felelősséget jelent a gyár területén végzett tevékenységünk.
-      </p>
-    </div>
-    <div class="about-right">
-      <p>
-        <%= image_tag "szecnehyilogo_transp.png", alt:"széchényi logó" %>
-      </p>
-      <p class="text-sm text-center">
-        Cégünk két alkalommal is eredményesen szerepelt a Széchenyi 2020 pályázati programban, melyek révén jelentős támogatásban részesültünk infrastrukturális és fejlesztési céljaink megvalósításához.
-      </p>
-      <a href="/kp/grants" class="btn btn-primary btn-hero">
-        Tovább olvasom...
-      </a>
-    </div>
+  <div class="about-left text-md text-justify">
+    <p>
+      Cégünk 2011-ben kezdte tevékenységét. A társaság ügyvezetője Lengyel Árpád, aki a Kft. megalakulását megelőzően
+      több kiemelkedő projektet vezetett, melynek során több mint 20 éves szakmai tapasztalatra tett szert a közmű- és
+      útépítés terén. Fő profilunk a víz- és csatornahálózatok, továbbá a vízépítéshez kapcsolódó olajfogó-,
+      tüzivíztározó műtárgyak építése, utak és parkolók kivitelezése. Rendelkezünk száloptikás csatorna kamerával, így
+      speciális helyeken is vizsgálatokat tudunk végezni. A kivitelezéssel összefüggő tervezési-, engedélyezési
+      feladatok, valamint az üzemeltető cégek felé történő átadások teljeskörű ügyintézését vállaljuk.
+    </p>
+    <p>
+      A társaság vezetője és állandó partnerei nagy szakmai rutinra tettek szert, és ismerve a közművek
+      követelményrendszerét, korrekt módon tudják azt a megrendelők igényeivel összehangolni. Vállalkozásunk alapvetően
+      a minőségi munkára, a korrekt üzleti kapcsolatokra és a megbízhatóságra, valamint a piacon való hosszú idejű
+      megmaradásra fekteti a hangsúlyt.
+    </p>
+    <p>
+      Szakmai elismertségünket jelzi, hogy a HUMAN BioPlazma Kft. Gyógyszergyár területén lévő teljes víz- csatorna
+      közmű hálózat karbantartását mi végezzük. Kiemelt fontosságú a gyár folyamatos termelése, így szakmailag igazi
+      kihívást és felelősséget jelent a gyár területén végzett tevékenységünk.
+    </p>
   </div>
+  <div class="about-right">
+    <p>
+      <%= image_tag "szecnehyilogo_transp.png", alt: "széchényi logó" %>
+    </p>
+    <p class="text-sm text-center">
+      Cégünk két alkalommal is eredményesen szerepelt a Széchenyi 2020 pályázati programban, melyek révén jelentős
+      támogatásban részesültünk infrastrukturális és fejlesztési céljaink megvalósításához.
+    </p>
+    <a href="/kp/grants" class="btn btn-primary btn-hero">
+      Tovább olvasom...
+    </a>
+  </div>
+</div>
 <div class="section-divider"></div>
 
-  <section class="container about-header">
-      <h2 class="text-xl">
-        Munkatársaink:
-      </h2>
-    <div class="team-columns text-md">
-      <div class="team-column">
-        <p>
-          <strong>Ügyvezető Igazgató:</strong> Lengyel Árpád
-        </p>
-        <p>
-          <strong>Gazdasági Vezető:</strong> Lengyel Judit
-        </p>
-        <p>
-          <strong>Asszisztens:</strong> 1 fő
-        </p>
-        <p>
-          <strong>Ügyintéző:</strong> 2 fő
-        </p>
-      </div>
-      <div class="team-column">
-        <p>
-          <strong>Projekvezető :</strong> 1 fő
-        </p>
-        <p>
-          <strong>Brigádvezető:</strong> 4 fő
-        </p>
-
-      </div>
-      <div class="team-column">
-        <p>
-          <strong>Szakmunkások:</strong> 7 fő
-        </p>
-        <p>
-          <strong>Gépkezelő:</strong> 4 fő
-        </p>
-
-      </div>
+<section class="container about-header">
+  <h2 class="text-xl">
+    Munkatársaink:
+  </h2>
+  <div class="team-columns text-md">
+    <div class="team-column">
+      <p>
+        <strong>Ügyvezető Igazgató:</strong> Lengyel Árpád
+      </p>
+      <p>
+        <strong>Gazdasági Vezető:</strong> Lengyel Judit
+      </p>
+      <p>
+        <strong>Asszisztens:</strong> 1 fő
+      </p>
+      <p>
+        <strong>Ügyintéző:</strong> 2 fő
+      </p>
     </div>
-  </section>
+    <div class="team-column">
+      <p>
+        <strong>Projekvezető :</strong> 1 fő
+      </p>
+      <p>
+        <strong>Brigádvezető:</strong> 4 fő
+      </p>
+
+    </div>
+    <div class="team-column">
+      <p>
+        <strong>Szakmunkások:</strong> 7 fő
+      </p>
+      <p>
+        <strong>Gépkezelő:</strong> 4 fő
+      </p>
+
+    </div>
+  </div>
+</section>
 
 <div class="section-divider "></div>
 
@@ -100,83 +111,83 @@
   <h2 class="text-xl">
     Eszközparkunk:
   </h2>
+  </div>
+  <div class="equipment-grid">
+    <div class="equipment-item">
+      <%= image_tag "IMG_5847-e1617185594977-300x242.jpg", alt: "Mercedes KTA" %>
+      <p class="text-sm">
+        Mercedes Benz Actros
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2008
+      </p>
     </div>
-    <div class="equipment-grid">
-      <div class="equipment-item">
-        <%= image_tag "IMG_5847-e1617185594977-300x242.jpg", alt:"Mercedes KTA" %>
-        <p class="text-sm">
-          Mercedes Benz Actros
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2008
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "jcb-3cx.jpg" , alt:"Árokásó és rakodógép" %>
-        <p class="text-sm">
-          Árokásó és rakodógép
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2015
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "maxresdefault-e1501225253362.jpg", alt:"12,5 t gumikerekes forgó-kotrógép" %>
-        <p class="text-sm">
-          12,5 t gumikerekes forgó-kotrógép
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2015
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "case-cx26.jpg", alt:"2,7 t láncos kotrógép" %>
-        <p class="text-sm">
-          Case CX26 2,7 t láncos kotrógép
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2017
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "case-wx168.jpg" , alt:"18 t gumikerekes forgó- kotrógép" %>
-        <p class="text-sm">
-          Case WX168 18 t gumikerekes forgó- kotrógép
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2017
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "case-580stb2b4a140-300x225.jpg", alt:"Kotró rakodógép" %>
-        <p class="text-sm">
-          Case 580 Kotró rakodógép
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2017
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "BOBCAT-S-450.jpeg", alt:"Bobcat s 450" %>
-        <p class="text-sm">
-          BOBCAT S 450 csúszó kormányzású rakodó
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2019
-        </p>
-      </div>
-      <div class="equipment-item">
-        <%= image_tag "wheel-excavators-tb-295w-1-takeuchi-300x300.jpg" , alt:"gumikerekes kotrógép" %>
-        <p class="text-sm">
-          Takeuchi TB 295W gumikerekes kotrógép
-        </p>
-        <p class="text-sm">
-          <strong>Gyártás éve: </strong> 2020
-        </p>
-      </div>
+    <div class="equipment-item">
+      <%= image_tag "jcb-3cx.jpg", alt: "Árokásó és rakodógép" %>
+      <p class="text-sm">
+        Árokásó és rakodógép
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2015
+      </p>
     </div>
+    <div class="equipment-item">
+      <%= image_tag "maxresdefault-e1501225253362.jpg", alt: "12,5 t gumikerekes forgó-kotrógép" %>
+      <p class="text-sm">
+        12,5 t gumikerekes forgó-kotrógép
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2015
+      </p>
+    </div>
+    <div class="equipment-item">
+      <%= image_tag "case-cx26.jpg", alt: "2,7 t láncos kotrógép" %>
+      <p class="text-sm">
+        Case CX26 2,7 t láncos kotrógép
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2017
+      </p>
+    </div>
+    <div class="equipment-item">
+      <%= image_tag "case-wx168.jpg", alt: "18 t gumikerekes forgó- kotrógép" %>
+      <p class="text-sm">
+        Case WX168 18 t gumikerekes forgó- kotrógép
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2017
+      </p>
+    </div>
+    <div class="equipment-item">
+      <%= image_tag "case-580stb2b4a140-300x225.jpg", alt: "Kotró rakodógép" %>
+      <p class="text-sm">
+        Case 580 Kotró rakodógép
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2017
+      </p>
+    </div>
+    <div class="equipment-item">
+      <%= image_tag "BOBCAT-S-450.jpeg", alt: "Bobcat s 450" %>
+      <p class="text-sm">
+        BOBCAT S 450 csúszó kormányzású rakodó
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2019
+      </p>
+    </div>
+    <div class="equipment-item">
+      <%= image_tag "wheel-excavators-tb-295w-1-takeuchi-300x300.jpg", alt: "gumikerekes kotrógép" %>
+      <p class="text-sm">
+        Takeuchi TB 295W gumikerekes kotrógép
+      </p>
+      <p class="text-sm">
+        <strong>Gyártás éve: </strong> 2020
+      </p>
+    </div>
+  </div>
 
-  </section>
+</section>
 
 
 </body>
