--- a/app/views/kp/grants.html.erb
+++ b/app/views/kp/grants.html.erb
@@ -24,80 +24,84 @@
 
 <section class="container">
   <div class="text-xl">Pályázatok</div>
-    <div class="grants-grid text-md">
+  <div class="grants-grid text-md">
 
-      <div class="grants-item">
-        <p class="text-600">Pályázat leírása: </p>
-      </div>
-      <div class="grants-item">
-        <p>A GINOP-1.2.11-20 „Mikro-, kis- és középvállalkozások modern üzleti és termelési kihívásokhoz való alkalmazkodását segítő fejlesztések támogatása” program keretében a cég 19 850 000 Ft vissza nem térítendő támogatásban részesült egy lézervágó berendezés beszerzésére.</p>
-      </div>
-      <div class="grants-item">
-        <p>	A VEKOP-1.3.1-16 „Munkahelyi innováció támogatása” keretében elnyert 13 200 000 Ft támogatásból a vállalkozás bevezetett egy modern vállalatirányítási rendszert (ERP) és ezzel együtt új számítástechnikai eszközöket szerzett be.</p>
-      </div>
-
-      <div class="grants-item">
-        <p class="text-600">A fejlesztést indukáló problémák:</p>
-      </div>
-      <div class="grants-item">
-        <p>	A kézi lemezmegmunkálás időigényes volt és nem tette lehetővé az egyedi formák gyors kivitelezését.</p>
-      </div>
-      <div class="grants-item">
-        <p>	A meglévő adminisztrációs folyamatok manuálisak és időigényesek voltak, gyakori adatvesztéssel.</p>
-      </div>
-
-      <div class="grants-item">
-        <p class="text-600">A fejlesztés célja, indokoltsága:</p>
-      </div>
-      <div class="grants-item">
-        <p>	Az új technológia segítségével gyorsabb, pontosabb gyártás vált lehetővé, kevesebb selejt mellett.</p>
-      </div>
-      <div class="grants-item">
-        <p>	Az átláthatóbb működés és a gyorsabb adatkezelés érdekében szükségessé vált egy egységes informatikai rendszer bevezetése.</p>
-      </div>
-
-      <div class="grants-item">
-        <p class="text-600">Milyen tevékenységre lesz képes a cég a projektet követően:</p>
-      </div>
-      <div class="grants-item">
-        <p>	Egyedi formák, perforált fémlemezek lézervágása ipari minőségben.</p>
-      </div>
-      <div class="grants-item">
-        <p>	Valós idejű raktárkészlet- és projektmenedzsment, valamint gyorsabb pénzügyi riportok előállítása.</p>
-      </div>
-
-      <div class="grants-item">
-        <p class="text-600">Pályázati összeg felhasználása, vásárolt munkagép / eszköz:</p>
-      </div>
-      <div class="grants-item">
-        <p>	TRUMPF TruLaser 1030 fiber lézervágó gép</p>
-      </div>
-      <div class="grants-item">
-        <p>	SAP Business One ERP rendszer, 6 db Dell Optiplex munkaállomás</p>
-      </div>
-
-      <div class="grants-item">
-        <p class="text-600">Pályázat befejezésének időpontja:</p>
-      </div>
-      <div class="grants-item">
-        <p>	2021.11.10.</p>
-      </div>
-      <div class="grants-item">
-        <p>	2022.06.05.</p>
-      </div>
-
-      <div class="">
-        <p></p>
-      </div>
-      <div class="grants-item">
-        <%= image_tag "szechenyi-2020-minta.png", alt:"Széchényi Minta" %>
-      </div>
-      <div class="grants-item">
-        <%= image_tag "szechenyi-2020-minta.png", alt:"Széchényi Minta" %>
-      </div>
+    <div class="grants-item">
+      <p class="text-600">Pályázat leírása: </p>
     </div>
-</section>
+    <div class="grants-item">
+      <p>A GINOP-1.2.11-20 „Mikro-, kis- és középvállalkozások modern üzleti és termelési kihívásokhoz való
+        alkalmazkodását segítő fejlesztések támogatása” program keretében a cég 19 850 000 Ft vissza nem térítendő
+        támogatásban részesült egy lézervágó berendezés beszerzésére.</p>
+    </div>
+    <div class="grants-item">
+      <p> A VEKOP-1.3.1-16 „Munkahelyi innováció támogatása” keretében elnyert 13 200 000 Ft támogatásból a vállalkozás
+        bevezetett egy modern vállalatirányítási rendszert (ERP) és ezzel együtt új számítástechnikai eszközöket
+        szerzett be.</p>
+    </div>
 
+    <div class="grants-item">
+      <p class="text-600">A fejlesztést indukáló problémák:</p>
+    </div>
+    <div class="grants-item">
+      <p> A kézi lemezmegmunkálás időigényes volt és nem tette lehetővé az egyedi formák gyors kivitelezését.</p>
+    </div>
+    <div class="grants-item">
+      <p> A meglévő adminisztrációs folyamatok manuálisak és időigényesek voltak, gyakori adatvesztéssel.</p>
+    </div>
+
+    <div class="grants-item">
+      <p class="text-600">A fejlesztés célja, indokoltsága:</p>
+    </div>
+    <div class="grants-item">
+      <p> Az új technológia segítségével gyorsabb, pontosabb gyártás vált lehetővé, kevesebb selejt mellett.</p>
+    </div>
+    <div class="grants-item">
+      <p> Az átláthatóbb működés és a gyorsabb adatkezelés érdekében szükségessé vált egy egységes informatikai rendszer
+        bevezetése.</p>
+    </div>
+
+    <div class="grants-item">
+      <p class="text-600">Milyen tevékenységre lesz képes a cég a projektet követően:</p>
+    </div>
+    <div class="grants-item">
+      <p> Egyedi formák, perforált fémlemezek lézervágása ipari minőségben.</p>
+    </div>
+    <div class="grants-item">
+      <p> Valós idejű raktárkészlet- és projektmenedzsment, valamint gyorsabb pénzügyi riportok előállítása.</p>
+    </div>
+
+    <div class="grants-item">
+      <p class="text-600">Pályázati összeg felhasználása, vásárolt munkagép / eszköz:</p>
+    </div>
+    <div class="grants-item">
+      <p> TRUMPF TruLaser 1030 fiber lézervágó gép</p>
+    </div>
+    <div class="grants-item">
+      <p> SAP Business One ERP rendszer, 6 db Dell Optiplex munkaállomás</p>
+    </div>
+
+    <div class="grants-item">
+      <p class="text-600">Pályázat befejezésének időpontja:</p>
+    </div>
+    <div class="grants-item">
+      <p> 2021.11.10.</p>
+    </div>
+    <div class="grants-item">
+      <p> 2022.06.05.</p>
+    </div>
+
+    <div>
+      <p></p>
+    </div>
+    <div class="grants-item">
+      <%= image_tag "szechenyi-2020-minta.png", alt: "Széchényi Minta" %>
+    </div>
+    <div class="grants-item">
+      <%= image_tag "szechenyi-2020-minta.png", alt: "Széchényi Minta" %>
+    </div>
+  </div>
+</section>
 
 
 </body>
