--- a/app/views/kp/home.html.erb
+++ b/app/views/kp/home.html.erb
@@ -61,7 +61,7 @@
               érdekében, hogy egy munkanapon
               belül válaszoljunk megkeresésére.
             </p>
-          <a href="/kp/contact" class="btn btn-primary btn-hero text-center">Tudjon meg többet!</a>
+            <a href="/kp/contact" class="btn btn-primary btn-hero text-center">Tudjon meg többet!</a>
         </div>
         </div>
           <%= image_tag "munka2.jpg", alt:"Contact", class: "box-image"%>
@@ -82,7 +82,7 @@
               Versenyképes juttatásokat, biztonságos
               munkakörnyezetet és folyamatos fejlődési
               lehetőséget biztosítunk kollégáink számára.            </p>
-            <a href="#" class="btn btn-primary btn-hero text-center">Tudjon meg többet!</a>
+            <a href="/kp/joinourteam" class="btn btn-primary btn-hero text-center">Tudjon meg többet!</a>
           </div>
         </div>
       </div>
